# bot

mindmy_ai_full/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_report.txt
mindmy_ai_full/cli/: main.py
mindmy_ai_full/docs/: architecture.puml
mindmy_ai_full/knowledge_vault/: format_templates.json
mindmy_ai_full/migrations/: alembic.ini
mindmy_ai_full/mindmy_api/: main.py
mindmy_ai_full/mindmy_core/: __init__.py  context_engine.py  dna_engine.py  intent_planner.py  security_guard.py
mindmy_ai_full/mindmy_memory/: __init__.py  redis_adapter.py  supabase_adapter.py
mindmy_ai_full/mindmy_tg/: bot.py  config.py
mindmy_ai_full/tests/: conftest.py  test_api.py  test_context_engine.py  test_security_guard.py
mymindai-main/mymindai-main/backend/: AiRequests.py  api_logic.py  app.py  bot_logic.py  db.py  functions.py  logger.py
mymindai-main/mymindai-main/backend/helpers/: get_system_prompt.py
mymindai-main/mymindai-main/backend/models/: User.py
mymindai-main/mymindai-main/frontend/: package-lock.json  package.json  vite.config.js
mymindai-main/mymindai-main/frontend/src/: App.css  App.jsx
mymindai-main/mymindai-main/frontend/src/components/: EventAddForm.jsx  EventList.jsx  EventsListAll.jsx  Header.jsx  Modal.css  Modal.jsx  NoteAddForm.jsx  NoteList.jsx  NoteListAll.jsx  TaskAddForm.jsx  TasksList.jsx  TasksListAll.jsx
mymindai-main/mymindai-main/frontend/src/pages/: AdminUserDetail.jsx  AdminUserList.jsx  EventDetailPage.jsx  EventsPage.jsx  MainPage.jsx  NoteDetailPage.css  NoteDetailPage.jsx  NotesPage.jsx  TaskDetailPage.jsx  (+3 more)
(+6 files in other folders)
